--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "pk-ts-common-lib": "git+https://github.com/pkirkaas/pk-ts-common-lib.git#working",
     "stack-trace": "*",
+    "dotenv": "*",
     "stacktracey": "*",
     "ts-node": "*",
     "tsconfig-paths": "*",
