--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "pk-ts-common-lib": "git+https://github.com/pkirkaas/pk-ts-common-lib.git#working",
+    "inquirer": "latest",
+    "yargs": "latest",
     "stack-trace": "*",
     "fs-path": "*",
     "fs-extra": "*",
