There will be a lot of test commits to figure out exports from package.json...

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main":"dist/index",
   "exports": {
     ".": "./dist/index.js",
-    "./tst-exports": "./dist/tst-exports"
+    "./tst-exports": "./dist/tst-exports.js"
   },
   "type": "commonjs",
   "engines": {
