--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "author": "Paul Kirkaas",
   "license": "UNLICENSED",
   "description": "TS/JS Utilities for node apps, including common JS functions",
+  "comments" : {
+  },
   "main":"dist/index",
   "exports": {
     ".": "./dist/index.js",
-    "tst-exports": "./dist/tst-exports.js"
+    "tst-exports": {
+      "import" : "./dist/tst-exports.js",
+      "require" : "./dist/tst-exports.js"
+    }
   },
   "type": "commonjs",
   "engines": {
