There will be a lot of test commits to figure out exports from package.json...

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main":"dist/index",
   "exports": {
     ".": "./dist/index.js",
-    "tst-exports": {
+    "./tst-exports": {
       "import" : "./dist/tst-exports.js",
       "require" : "./dist/tst-exports.js"
     }
