There will be a lot of test commits to figure out exports from package.json...

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "license": "UNLICENSED",
   "description": "TS/JS Utilities for node apps, including common JS functions",
   "comments" : {
-  },
   "main":"dist/index",
+  "end":"end"
+  },
   "exports": {
     ".": "./dist/index.js",
     "./tst-exports": {
