There will be a lot of test commits to figure out exports from package.json...

--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "main": "dist/index",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.js"
     },
     "./tst-exports": {
+      "types": "./dist/tst-exports.d.ts",
       "import": "./dist/tst-exports.js",
       "require": "./dist/tst-exports.js"
     }
