There will be a lot of test commits to figure out exports from package.json...

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "sourceMap": true,
     "checkJs": true,
     "skipLibCheck": true,
-    "moduleResolution": "node",
+    "moduleResolution": "nodenext",
     "noImplicitAny": false,
     "allowSyntheticDefaultImports": true,
     "emitDecoratorMetadata": true,
