There will be a lot of test commits to figure out exports from package.json...

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
       "types": "./dist/tst-exports.d.ts",
       "import": "./dist/tst-exports.js",
       "require": "./dist/tst-exports.js"
-    }
+    },
+    "./tsconfig.json": "./tsconfig.json"
   },
   "type": "commonjs",
   "engines": {
