--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,25 @@
   "extends":"pk-ts-common-lib/tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "moduleResolution": "nodenext",
+    "declaration": true,
   },
   "include": [
     "./src/**/*",
   ],
+  "ts-node": {
+    "require": [
+      "tsconfig-paths/register"
+    ]
+  },
+  "exclude": [
+    "node_modules",
+    "dist",
+    "dist/**/*",
+    "*.d.ts"
+  ],
+   "typeRoots": [
+      "node_modules/@types",
+  ]
 }
