Moving towards 'ESM'

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     },
     "./tsconfig.json": "./tsconfig.json"
   },
-  "type": "commonjs",
+  "type": "module",
   "engines": {
     "node": ">= 18.0.0"
   },
