Moving all requires to imports, but not sure I had to - I think a config for both exists

--- a/package.json
+++ b/package.json
@@ -29,26 +29,26 @@
     "clean": "rm -rf ./dist ./node_modules package-lock.json"
   },
   "dependencies": {
-    "pk-ts-common-lib": "git+https://github.com/pkirkaas/pk-ts-common-lib.git#working",
-    "inquirer": "latest",
-    "typescript":"*",
-    "yargs": "latest",
-    "stack-trace": "*",
-    "fs-path": "*",
-    "fs-extra": "*",
-    "dotenv": "*",
-    "stacktracey": "*",
-    "ts-node": "*",
-    "tsconfig-paths": "*",
-    "uuid": "*",
     "@tsconfig/node18": "^1.0.1",
     "@types/lodash": "*",
-    "@types/node": "*",
+    "@types/node": "^18.14.1",
     "@typescript-eslint/eslint-plugin": "*",
     "@typescript-eslint/parser": "*",
+    "dotenv": "*",
     "eslint": "*",
     "eslint-config-prettier": "*",
     "eslint-plugin-prettier": "*",
-    "prettier": "*"
+    "fs-extra": "*",
+    "fs-path": "*",
+    "inquirer": "latest",
+    "pk-ts-common-lib": "git+https://github.com/pkirkaas/pk-ts-common-lib.git#working",
+    "prettier": "*",
+    "stack-trace": "*",
+    "stacktracey": "*",
+    "ts-node": "*",
+    "tsconfig-paths": "*",
+    "typescript": "*",
+    "uuid": "*",
+    "yargs": "latest"
   }
 }
