Trying to support CJS & ESM

--- a/tsconfig.common.json
+++ b/tsconfig.common.json
@@ -1,7 +1,6 @@
 {
-  "extends":"pk-ts-common-lib/tsconfig.json",
+  "extends":"pk-ts-common-lib/tsconfig.common.json",
   "compilerOptions": {
-    "outDir": "./dist",
     "baseUrl": ".",
     "esModuleInterop": true,
     "declaration": true,
