Everything close to working but constant tweaks - like which tsconfig file for ts-node?

--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -4,4 +4,11 @@
     "outDir": "./dist/esm",
     "module": "ESNext"
   },
+  "ts-node": {
+    "require": [
+      "tsconfig-paths/register"
+    ],
+
+    "esm":true,
+  },
 }
