--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "author": "Paul Kirkaas",
   "license": "UNLICENSED",
   "description": "TS/JS Utilities for node apps, including common JS functions",
+  "type":"module",
   "module":"./dist/esm/index.js",
-  "main": "dist/cjs/index.js",
+  "main": "./dist/cjs/index.js",
   "exports": {
     ".": {
       "types": "./dist/esm/index.d.ts",
