--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -1,14 +1,3 @@
 {
-  "extends":"./tsconfig.common.json",
-  "compilerOptions": {
-    "outDir": "./dist/esm",
-    "module": "ESNext"
-  },
-  "ts-node": {
-    "require": [
-      "tsconfig-paths/register"
-    ],
-
-    "esm":true,
-  },
+  "extends":"pk-ts-common-lib/tsconfig.esm.json",
 }
