Try changing default to ems?

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "exports": {
     ".": {
       "types": "./dist/esm/index.d.ts",
-      "default": "./dist/cjs/index.js",
+      "default": "./dist/esm/index.js",
       "import": "./dist/esm/index.js",
       "require": "./dist/cjs/index.js"
     },
