--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,4 +3,8 @@
  */
 {
   "extends":"pk-ts-common-lib/tsconfig.json",
+  "compilerOptions": {
+    "outDir": "./dist/cjs",
+    "module": "commonjs"
+  },
 }
