More on multi-module libs

--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -4,4 +4,10 @@
     "outDir": "./dist/cjs",
     "module": "commonjs"
   },
+  "ts-node": {
+    "require": [
+      "tsconfig-paths/register"
+    ],
+    "esm": false,
+  },
 }
