--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -4,4 +4,10 @@
     "outDir": "./dist/esm",
     "module": "ESNext"
   },
+  "ts-node": {
+    "require": [
+      "tsconfig-paths/register"
+    ],
+    "esm": true
+  },
 }
