--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -1,9 +1,13 @@
-{ 
-  "extends":"pk-ts-common-lib/tsconfig.cjs.json",
+{
+  "extends": "pk-ts-common-lib/tsconfig.cjs.json",
   "compilerOptions": {
+    "baseUrl": "./",
     "outDir": "./dist/cjs",
     "module": "commonjs"
   },
+  "include": [
+    "./src/**/*",
+    ],
   "ts-node": {
     "require": [
       "tsconfig-paths/register"
