--- a/tsconfig.common.json
+++ b/tsconfig.common.json
@@ -1,3 +1,18 @@
 {
-  "extends":"pk-ts-common-lib/tsconfig.common.json",
+  "extends": "pk-ts-common-lib/tsconfig.common.json",
+  "compilerOptions": {
+    "baseUrl": "./",
+    "outDir": "./dist/esm",
+    "module": "ESNext"
+  },
+  "include": [
+    "./src/**/*",
+    ],
+  "ts-node": {
+    "require": ["tsconfig-paths/register"]
+  },
+  "typeRoots": [
+      "node_modules/@types",
+      "src/custom_types/"
+  ]
 }
