--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,13 @@
 {
   "extends": "pk-ts-common-lib/tsconfig.json",
   "compilerOptions": {
+    "baseUrl": "./",
     "outDir": "./dist/esm",
     "module": "ESNext"
   },
+  "include": [
+    "./src/**/*",
+    ],
   "ts-node": {
     "require": [
       "tsconfig-paths/register"
