--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -1,6 +1,7 @@
 {
   "extends":"pk-ts-common-lib/tsconfig.esm.json",
     "compilerOptions": {
+    "target":"es6",
     "baseUrl": "./",
     "outDir": "./dist/esm",
     "module": "ESNext"
