--- a/package.json
+++ b/package.json
@@ -17,13 +17,11 @@
       "import": "./dist/esm/index.js",
       "require": "./dist/cjs/index.js"
     },
-    "./tsconfig.common.json": "./tsconfig.common.json",
-    "./tsconfig.esm.json": "./tsconfig.esm.json",
     "./tsconfig.cjs.json": "./tsconfig.cjs.json",
     "./tsconfig.json": "./tsconfig.json"
   },
   "scripts": {
-    "build": "tsc -p ./tsconfig.esm.json && tsc -p ./tsconfig.cjs.json",
+    "build": "tsc -p ./tsconfig.json && tsc -p ./tsconfig.cjs.json",
     "clean": "rm -rf ./dist ./node_modules package-lock.json"
   },
   "dependencies": {
