More fiddling w. tsconfigs....

--- a/package.json
+++ b/package.json
@@ -25,25 +25,25 @@
     "clean": "rm -rf ./dist ./node_modules package-lock.json && npm install"
   },
   "dependencies": {
-    "@tsconfig/node18": "^1.0.1",
-    "@types/lodash": "*",
-    "@types/node": "^18.14.1",
-    "@typescript-eslint/eslint-plugin": "*",
-    "@typescript-eslint/parser": "*",
+    "@tsconfig/node18": "^18.2.1",
+    "@types/lodash": "^4.14.198",
+    "@types/node": "^20.5.9",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "@typescript-eslint/parser": "^6.6.0",
     "dotenv": "*",
-    "eslint": "*",
+    "eslint": "^8.49.0",
     "eslint-config-prettier": "*",
     "eslint-plugin-prettier": "*",
     "fs-extra": "*",
     "fs-path": "*",
     "inquirer": "latest",
     "pk-ts-common-lib": "git+https://github.com/pkirkaas/pk-ts-common-lib.git#working",
-    "prettier": "*",
+    "prettier": "^3.0.3",
     "stack-trace": "*",
     "stacktracey": "*",
     "ts-node": "*",
     "tsconfig-paths": "*",
-    "typescript": "*",
+    "typescript": "^5.2.2",
     "uuid": "*",
     "valid-filename": "^4.0.0",
     "yargs": "latest"
